--- a/YourFuneral/www/css/index.css
+++ b/YourFuneral/www/css/index.css
@@ -1,6 +1,16 @@
+@font-face {
+  font-family: 'gbb__';
+  src: url('VCR_OSD_MONO_1.001.ttf')  format('opentype'); /* Safari, Android, iOS */
+
+}
 *{
 	margin: 0;
 	padding:0;
+    font-family: 'gbb__';
+}
+
+body{
+    background-color:black;
 }
 html{
 	/*background-color:black;*/
@@ -9,7 +19,9 @@ html{
 	width:200px;
 	margin: 0 auto;
 }
-
+.dark{
+       filter: brightness(10%);
+}
 .directional{
     height:80%;
     display:table-cell;
@@ -87,7 +99,8 @@ z-index:0;
     -webkit-border-image: url(../img/border.png) 5 5 stretch; /* Safari 3.1-5 */
     -o-border-image: url(../img/border.png) 5 5 stretch; /* Opera 11-12.1 */
     border-image: url(../img/border.png) 5 5 stretch;
-	margin-top:100px;
+	margin-top:10px;
+    margin-bottom:20px;
 }
 
 .hp-inner{
@@ -102,15 +115,12 @@ transition:300ms linear;
 
 .hp-wrapper{
 left:0;
-position:absolute;
-top:55%;
 padding-left:20px;
 z-index:100;
 height:20px;
 }
 .hp-wrapper p{
 	font-size: 1.4em; 
-font-family: 'VT323';
 text-align:center;
 }
 
@@ -124,3 +134,158 @@ text-align:center;
     max-height:300px;
     overflow: scroll;
 }
+.hud{
+    height:140px;
+
+}
+
+.panel-body{
+    color: black;
+}
+/* pretty */
+
+.framed{
+      border-style: solid;
+  border-image-source: url("rpgui/border-image-golden.png");
+  border-image-repeat: repeat;
+  border-image-slice: 4 4 4 4;
+  border-image-width: 18px;
+  border-width: 15px;
+  padding: 12px;
+  /* internal border */
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  /* background */
+  background: url("rpgui/background-image-golden.png") repeat repeat;
+  background-clip: padding-box;
+  background-origin: padding-box;
+  background-position: center; 
+  color: #FFFFFF;
+}
+
+ /* set scrollbars for webkit browsers (like chrome) */
+.framed ::-webkit-scrollbar,
+.framed::-webkit-scrollbar {
+  width: 18px; }
+
+/* Track */
+.framed ::-webkit-scrollbar-track,
+.framed::-webkit-scrollbar-track {
+  background-image: url("rpgui/scrollbar-track.png");
+  background-size: 18px 60px;
+  background-repeat: repeat-y; }
+
+/* Handle */
+.framed ::-webkit-scrollbar-thumb,
+.framed::-webkit-scrollbar-thumb {
+  background-image: url("rpgui/scrollbar-thumb.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat; }
+
+
+/**
+* Styling for buttons
+*/
+/* button style */
+.rpgui-button {
+  /* hide button default stuff */
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  overflow: hidden;
+  outline: none;
+  /* background */
+  background: url("rpguibutton.png") no-repeat no-repeat;
+  background-clip: padding-box;
+  background-origin: padding-box;
+  background-position: center;
+  background-size: 100% 100%;
+  /* font size */
+  font-size: 1.0em;
+  /* default size and display */
+  max-width: 100%;
+  min-width: 140px;
+  height: 60px;
+  display: inline-block;
+  /* padding */
+  padding-left: 35px;
+  padding-right: 35px; }
+
+/* button hover */
+.rpgui-button.hover,
+.rpgui-button:hover {
+  background-image: url("rpguibutton-hover.png"); }
+
+/* button clicked */
+.rpgui-button.down,
+.rpgui-button:active {
+  background-image: url("rpguibutton-down.png"); }
+
+/* golden button stuff */
+.rpgui-button.golden p {
+  display: inline-block; }
+
+/* golden button style */
+.rpgui-button.golden {
+  /* hide button default stuff */
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  overflow: hidden;
+  outline: none;
+  /* background */
+  background: url("rpguibutton-golden.png") no-repeat no-repeat;
+  background-clip: padding-box;
+  background-origin: padding-box;
+  background-position: center;
+  background-size: 100% 80%;
+  /* default size and display */
+  max-width: 100%;
+  min-width: 140px;
+  height: 60px;
+  display: inline-block;
+  /* padding */
+  padding-top: 5px;
+  padding-left: 35px;
+  padding-right: 35px;
+  overflow: visible; }
+
+/* button hover */
+.rpgui-button.golden.hover,
+.rpgui-button.golden:hover {
+  background-image: url("rpguibutton-golden-hover.png"); }
+
+/* button clicked */
+.rpgui-button.golden.down,
+.rpgui-button.golden:active {
+  background-image: url("rpguibutton-golden-down.png"); }
+
+.rpgui-button.golden:before {
+  white-space: nowrap;
+  display: inline-block;
+  content: "";
+  width: 34px;
+  display: block;
+  height: 110%;
+  background: transparent url("rpguibutton-golden-left.png") no-repeat right center;
+  background-size: 100% 100%;
+  margin: 0 0 0 0;
+  left: 0px;
+  float: left;
+  margin-left: -46px;
+  margin-top: -5%; }
+
+.rpgui-button.golden:after {
+  white-space: nowrap;
+  display: block;
+  content: "";
+  width: 34px;
+  height: 110%;
+  background: transparent url("rpguibutton-golden-right.png") no-repeat left center;
+  background-size: 100% 100%;
+  margin: 0 0 0 0;
+  right: 0px;
+  float: right;
+  margin-right: -46px;
+  margin-top: -5%; }
